--- a/index.html
+++ b/index.html
@@ -59,15 +59,18 @@
             </div>
             <div class="timetable__lessons_time">
                <div class="timetable__lessons_time_slot" v-for="(item, i) in lessonToday">
-                  {{`${item.lessonStart.getHours()}:${item.lessonStart.getMinutes()}`}}
+                  {{`${item.lessonStart.getHours()}:${item.lessonStart.getMinutes() == 0 ? "00" :
+                  item.lessonStart.getMinutes()}`}}
                </div>
 
             </div>
             <div class="timetable__lessons_wrapper">
                <div class="lesson" id="qqq" v-for="(item, i) in lessonToday">
-                  <div class="lesson__cabinet">{{item.classroom}}</div>
-                  <div class="lesson__thing">{{item.lessonName}}</div>
-                  <div class="lesson__add-information">
+                  <div class="lesson__cabinet" :style="{fontSize: item.classroom.length > 5 ? '25px': '32px' }">
+                     {{item.classroom}}</div>
+                  <div class="lesson__thing" :style="{fontSize: item.lessonName.length > 45 ? '20px': '30px' }">
+                     {{item.lessonName}}</div>
+                  <div class=" lesson__add-information">
                      <div class="lesson__add-information_teacher">{{item.teacher}}</div>
                      <div class="lesson__add-information_type">{{item.lessonType}}</div>
                   </div>
