--- a/index.html
+++ b/index.html
@@ -15,110 +15,112 @@
       rel="stylesheet">
 </head>
 
-<body id="app">
-   <header class="header">
-      <a href="" class="header__logo"> <img src="" alt="">
-         Роспись
-      </a>
-      <nav class="header__nav">
-         <a href="https://www.tinkoff.ru/rm/abdullin.zulfat1/P8IWj66899" class="header__nav_donat">Поддержать</a>
-         <a href="https://drive.google.com/drive/folders/1pCUFpOwq4fSS-5sf7taSKWZIpF4m2ixI"
-            class="header__nav_files">Файлы</a>
-         <div class="header__nav_calendar-switch">
-            <button class="header__nav_calendar-switch_button">
-               <div class="header__nav_calendar-switch_button_selector"></div>
-            </button>
-         </div>
-         <div class="header__nav_theme-switch">
-            <button class="header__nav_theme-switch_button">
-               <div class="header__nav_theme-switch_button_selector"></div>
-            </button>
-         </div>
-      </nav>
-   </header>
-
-   <div class="wrapper">
-      <div class="timetable">
-         <div class="timetable__date">
-            <button class="timetable__date_leftBTN" @click="reduceDate">
-               <img src="/icons/swich_btn.svg" alt="a">
-            </button>
-            <div class="timetable__date_scoreboard">
-               <div class="timetable__date_scoreboard_day-of-week">{{dayOfWeek}}</div>
-               <div class="timetable__date_scoreboard_number">{{dateToday}}</div>
+<body>
+   <div class="app" id="app">
+      <header class="header ">
+         <a href="" class="header__logo"> <img src="" alt="">
+            Роспись
+         </a>
+         <nav class="header__nav">
+            <a href="https://www.tinkoff.ru/rm/abdullin.zulfat1/P8IWj66899" class="header__nav_donat">Поддержать</a>
+            <a href="https://drive.google.com/drive/folders/1pCUFpOwq4fSS-5sf7taSKWZIpF4m2ixI"
+               class="header__nav_files">Файлы</a>
+            <div class="header__nav_calendar-switch">
+               <button class="header__nav_calendar-switch_button" @click:="counterPLUS">
+                  <div class="header__nav_calendar-switch_button_selector"></div>
+               </button>
             </div>
-
-            <button class="timetable__date_rightBTN" @click="increaseDate">
-               <img src="/icons/swich_btn.svg" alt="a">
-            </button>
-         </div>
-         <div class="calendar">
-            <div class="calendar__date">
-               <div class="date-day ">ПН</div>
-               <div class="date-day">ВТ</div>
-               <div class="date-day">СР</div>
-               <div class="date-day">ЧТ</div>
-               <div class="date-day">ПТ</div>
-               <div class="date-day red">СБ</div>
-               <div class="date-day red">ВС</div>
+            <div class="header__nav_theme-switch">
+               <button class="header__nav_theme-switch_button">
+                  <div class="header__nav_theme-switch_button_selector"></div>
+               </button>
             </div>
-            <div class="calendar__date_namber-box">
-               <div class="calendar__date_namber-box_wrapper ">
+         </nav>
+      </header>
 
-                  <button class="date-namber " v-for="elem in calendar"
-                     :style="{visibility: elem == 0 ? 'hidden' : 'visible' }" @click="switchDateFromCalendar(elem)"
-                     :style="{visibility: elem == 0 ? 'hidden' : 'visible' }"
-                     :class="elem == toDayStatic.getDate() ? 'animation'  : '0'"
-                     :class="elem == toDayStatic.getDate() ? 'animation'  : '0'">
-                     {{elem}}
-                  </button>
-
-               </div>
-               <div class="lesson-type">
-                  <div class="lesson-type__lecture">
-                     <div class="lesson-type__lecture_color"></div>
-                     <div class="lesson-type__lecture_name"> - ЛЕКЦИЯ</div>
-                  </div>
-                  <div class="lesson-type__exam">
-                     <div class="lesson-type__exam_color"></div>
-                     <div class="lesson-type__exam_name">- ЭКЗАМЕН/ЗАЧЕТ</div>
-                  </div>
-               </div>
-            </div>
-         </div>
-         <div class="timetable__lessons">
-            <div class="timetable__lessons_number">
-               <div class="timetable__lessons_number_slot " v-for="(time, i) in lessonToday">{{i+1}}</div>
-
-            </div>
-            <div class="timetable__lessons_time">
-               <div class="timetable__lessons_time_slot" v-for="(item, i) in lessonToday">
-                  {{`${item.lessonStart.getHours()}:${item.lessonStart.getMinutes() == 0 ? "00" :
-                  item.lessonStart.getMinutes()}`}}
+      <div class="wrapper">
+         <div class="timetable">
+            <div class="timetable__date">
+               <button class="timetable__date_leftBTN" @click="reduceDate">
+                  <img src="/icons/swich_btn.svg" alt="a">
+               </button>
+               <div class="timetable__date_scoreboard">
+                  <div class="timetable__date_scoreboard_day-of-week">{{dayOfWeek}}</div>
+                  <div class="timetable__date_scoreboard_number">{{dateToday}}</div>
                </div>
 
+               <button class="timetable__date_rightBTN" @click="increaseDate">
+                  <img src="/icons/swich_btn.svg" alt="a">
+               </button>
             </div>
-            <div class="timetable__lessons_wrapper">
-               <div class="lesson" id="qqq" v-for="(item, i) in lessonToday">
-                  <div class="lesson__cabinet" :style="{fontSize: item.classroom.length > 5 ? '25px': '32px' }">
-                     {{item.classroom}}</div>
-                  <div class="lesson__thing" :style="{fontSize: item.lessonName.length > 45 ? '20px': '30px' }">
-                     {{item.lessonName}}</div>
-                  <div class=" lesson__add-information">
-                     <div class="lesson__add-information_teacher">{{item.teacher}}</div>
-                     <div class="lesson__add-information_type">{{item.lessonType}}</div>
+
+            <div class="timetable__lessons">
+               <div class="timetable__lessons_number">
+                  <div class="timetable__lessons_number_slot " v-for="(time, i) in lessonToday">{{i+1}}</div>
+
+               </div>
+               <div class="timetable__lessons_time">
+                  <div class="timetable__lessons_time_slot" v-for="(item, i) in lessonToday">
+                     {{`${item.lessonStart.getHours()}:${item.lessonStart.getMinutes() == 0 ? "00" :
+                     item.lessonStart.getMinutes()}`}}
                   </div>
 
                </div>
+               <div class="timetable__lessons_wrapper">
+                  <div class="lesson" id="qqq" v-for="(item, i) in lessonToday">
+                     <div class="lesson__cabinet"
+                        :style="{fontSize: (item.classroom.length > 5  && this.width >= 500) ? '25px': '' }">
+                        {{item.classroom}}</div>
+                     <div class="lesson__thing"
+                        :style="{fontSize: (item.lessonName.length > 45 && this.width >= 500 ) ? '20px': '' }">
+                        {{item.lessonName}}</div>
+                     <div class=" lesson__add-information">
+                        <div class="lesson__add-information_teacher">{{item.teacher}}</div>
+                        <div class="lesson__add-information_type">{{item.lessonType}}</div>
+                     </div>
 
+                  </div>
+
+               </div>
+            </div>
+
+            <div class="calendar">
+               <div class="calendar__date">
+                  <div class="date-day ">ПН</div>
+                  <div class="date-day">ВТ</div>
+                  <div class="date-day">СР</div>
+                  <div class="date-day">ЧТ</div>
+                  <div class="date-day">ПТ</div>
+                  <div class="date-day red">СБ</div>
+                  <div class="date-day red">ВС</div>
+               </div>
+               <div class="calendar__date_namber-box">
+                  <div class="calendar__date_namber-box_wrapper ">
+
+                     <button class="date-namber " v-for="elem in calendar" :style="{visibility: elem == 0 ? 'hidden' : 'visible',
+                              color: elem == toDayStatic.getDate() && toDay.getMonth() === toDayStatic.getMonth() ? 'red' : 'black'
+                           }" @click="switchDateFromCalendar(elem)"
+                        :class="(elem == toDay.getDate() ) ? 'animation'  : '0'">
+                        {{elem}}
+                     </button>
+
+                  </div>
+                  <div class="lesson-type">
+                     <div class="lesson-type__lecture">
+                        <div class="lesson-type__lecture_color"></div>
+                        <div class="lesson-type__lecture_name"> - ЛЕКЦИЯ</div>
+                     </div>
+                     <div class="lesson-type__exam">
+                        <div class="lesson-type__exam_color"></div>
+                        <div class="lesson-type__exam_name">- ЭКЗАМЕН/ЗАЧЕТ</div>
+                     </div>
+                  </div>
+               </div>
             </div>
          </div>
-
-
       </div>
+
    </div>
-
-
 
    <script src="https://unpkg.com/vue@next"></script>
    <script src="js/script.js"></script>
